--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/alexsaves/node-ffencode#readme",
   "dependencies": {
     "bindings": "^1.3.0",
-    "nan": "^2.10.0"
+    "nan": "^2.10.0",
+    "shortid": "^2.2.8"
   },
   "gypfile": true
 }
