get buffer and cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,13 @@
 /cpp/.DS_Store
 /out.jpg
 /out.png
+/out_0.png
+/out_1.png
+/out_2.png
+/out_3.png
+/out_4.png
+/out_5.png
+/out_6.png
+/out_7.png
+/out_8.png
+/out_9.png
