Jpeg encoding of frames

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,13 @@
 /out_7.png
 /out_8.png
 /out_9.png
+/out_0.jpg
+/out_1.jpg
+/out_2.jpg
+/out_3.jpg
+/out_4.jpg
+/out_5.jpg
+/out_6.jpg
+/out_7.jpg
+/out_8.jpg
+/out_9.jpg
