--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bindings": "^1.3.0",
     "nan": "^2.10.0",
+    "node-gyp": "^3.6.2",
     "shortid": "^2.2.8"
   },
   "gypfile": true
